--- a/数组去重.md
+++ b/数组去重.md
@@ -1,2 +1,21 @@
 ## 数组去重
-- 计数排序的逻辑
+- 双层循环，外层循环元素，内层循环时比较值
+```
+var arr = [1,2,3,'a',1,2]
+var len = arr.length
+for (let i = 0; i < len; i++) {
+    for (let j = i + 1; j < len; j++) {
+        if (arr[i] === arr[j]) {
+            arr.splice(j,1)
+            len--
+            j--
+        }
+    }
+}
+```
+- 利用ES6的set
+```
+var arr = [1,2,3,'a',1,2]
+arr =  Array.from(new Set(arr))
+console.log(arr)
+```
