--- a/继承.md
+++ b/继承.md
@@ -11,6 +11,34 @@ Person.prototype.getName = function(){
 };    
 
 function Male(name, sex, age){
+    Person.apply(this, arguments);
+    this.age = age;
+}
+
+var f = function() {}
+f.prototype = Person.prototype
+Male.prototype = new f()
+Male.prototype.constructor = Male;
+
+Male.prototype.getAge = function(){
+    console.log(this.age);
+};
+
+var wht = new Male('wanghaitao', '男', 24);
+wht.getName();
+```
+
+```
+function Person(name, sex){
+    this.name = name;
+    this.sex = sex;
+}
+
+Person.prototype.getName = function(){
+    console.log(this.name)
+};    
+
+function Male(name, sex, age){
     Person.call(this, name, sex);
     this.age = age;
 }
@@ -23,4 +51,41 @@ Male.prototype.getAge = function(){
 
 var wht = new Male('wanghaitao', '男', 24);
 wht.getName();
+```
+
+```
+class Animal { 
+  constructor(name) {
+    this.name = name
+  }
+
+  run() {
+    console.log(this.name + ' run')
+  }  
+  static printName() {
+    console.log(this.name)
+  }
+  speak() {
+    console.log(this.name + ' makes a noise.')
+  }
+}
+
+class Dog extends Animal {
+  constructor(name, age) {
+    super(name)
+    this.age = age
+  }
+
+  sayAge() {
+    console.log(this.name + this.age + ' age.')
+  }
+  
+  speak() {
+    super.speak()
+    console.log(this.name + ' barks.')
+  }
+}
+
+var d = new Dog('Mitzie', 24)
+d.speak()
 ```
